# rust-python-celery-integration

./: .env  .gitignore  DEVELOPMENT.md  README.md  docker-compose.yml
docs/: arch-report.html
python-worker/: celeryconfig.py  requirements.txt  tasks.py  test_tasks.py
rust-celery-producer/: Cargo.toml
rust-celery-producer/src/: lib.rs  producer.rs  protocol.rs  result.rs
rust-celery-producer/tests/: integration_test.rs
rust-producer/: Cargo.toml
rust-producer/src/: main.rs
tests/: end_to_end.sh
