[package]
name = "celery-redis-producer"
version = "0.1.0"
edition = "2021"
description = "Rust producer for Python Celery via Redis. Zero third-party Celery dependency, binary-compatible with kombu."
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.25", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.8", features = ["v4"] }
base64 = "0.22"
futures-util = "0.3"
